# CMake_SWIG_TEST

./: CMakeLists.txt  MyClass.cpp  MyClass.h  MyClass.i  README.md  wrapper_test.py
